# satch

./: .gitignore  CMakeLists.txt  README.md
src/: elf_file.c  elf_header.c  elf_program_header.c  elf_section_header.c  elf_sections.c  main.c
src/headers/: elf_file.h  elf_header.h  elf_program_header.h  elf_section_header.h  elf_sections.h  macros.h  structs.h
